--- a/themes/isabella/incl/footer.twig
+++ b/themes/isabella/incl/footer.twig
@@ -1,7 +1,7 @@
 <div class="footer">
     <div>
         <p>
-            En footer med lite text.
+            Portfolio för Isabella Garneij 2022.
         </p>
     </div>
     <div class="social">
