--- a/themes/isabella/css/style.css
+++ b/themes/isabella/css/style.css
@@ -1,58 +1,59 @@
 :root {
-    /* --darkClr: #0C177E; */
-    --darkClr: #161616;
-    --lightClr: #E8E8E8;
-    --accentClr: #2047d4;
+  --darkClr: #161616;
+  --lightClr: #e8e8e8;
+  --accentClr: #2146F5;
 }
 
 * {
-    box-sizing: border-box;
-    border: 0 none;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  border: 0 none;
+  margin: 0;
+  padding: 0;
 }
 
-ol, ul {
-    padding-left: 1.5em;
+ol,
+ul {
+  padding-left: 1.5em;
 }
 
 .hidden {
-    display: none !important;
+  display: none !important;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 /* Placement */
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
-    flex: 1 0 auto;
-    max-width: 70%;
-    margin: 1rem auto;
+  flex: 1 0 auto;
+  max-width: 70%;
+  margin: 1rem auto;
 }
 
-.header, .footer {
-    flex: 0 0 auto;
+.header,
+.footer {
+  flex: 0 0 auto;
 }
 
 /* Header */
 .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem;
-
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
 }
- .site-header {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    gap: 2rem;
+.site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
 }
 
 /* Title */
@@ -62,77 +63,88 @@ body {
 } */
 
 @media (max-width: 767px) {
-    .title, .logo {
-        padding: 1em;
-    }
-    .title {
-        min-width: 50%;
-    }
-    .logo {
-        max-width: 30%;
-    }
+  /* .title,
+  .logo {
+    padding: 1em;
+  } */
+  .title {
+    min-width: 50%;
+
+  }
+  .logo {
+    max-width: 30%;
+  }
 }
 
 .title * {
-    color: var(--darkClr);
+  color: var(--darkClr);
 }
 
 .title p {
-    font-style: italic;
+  font-style: italic;
 }
+
 /* Main */
+
 .me {
-    max-width: 200px;
-    margin-right: 2rem;
+  max-width: 200px;
+  margin-right: 2rem;
 }
 
 /* Footer */
 
 .footer {
-    display: flex;
-    justify-content: space-between;
-    border-top: 2px solid var(--darkClr);
-    padding: 2rem;
-    /* background-color: var(--darkClr); */
-    /* color: var(--lightClr); */
+  display: flex;
+  justify-content: space-between;
+  border-top: 2px solid var(--darkClr);
+  padding: 2rem;
 }
 
 .footer a {
-    /* color: var(--lightClr); */
-    color: var(--darkClr);
+  /* color: var(--lightClr); */
+  color: var(--darkClr);
 }
 
 .footer .social {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 /* Typography */
 
 body {
-    font-family: Helvetica, sans-serif;
-    line-height: 1.5rem;
-    background-color:var(--lightClr);
-    color: var(--darkClr);
+  font-family: Helvetica, sans-serif;
+  line-height: 1.2;
+  background-color: var(--lightClr);
+  color: var(--darkClr);
 }
 
-p, td, th, li, dd {
-    text-align: justify;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    margin-bottom: 0.6em;
+p,
+td,
+th,
+li,
+dd {
+  text-align: justify;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  margin-bottom: 0.6em;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 0.6em;
-    font-weight: bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.6em;
+  font-weight: bold;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* BELOW ARE PREPARED STYLES FOR CODE/PRE/BLOCKQUOTE, FEEL FREE TO REMOVE IT  */
@@ -140,38 +152,38 @@ a {
 /* Code */
 
 code {
-    margin: 0 0.1em;
-    padding: 0.1em 0.2em;
-    border: 1px solid #ccc;
-    border-radius: 0.3em;
-    background: #f5f5f5;
-    font-family: monospace;
-    font-size: 0.85rem;
-    line-height: 1.9824;
+  margin: 0 0.1em;
+  padding: 0.1em 0.2em;
+  border: 1px solid #ccc;
+  border-radius: 0.3em;
+  background: #f5f5f5;
+  font-family: monospace;
+  font-size: 0.85rem;
+  line-height: 1.9824;
 }
 
 pre {
-    padding: 0 1em;
-    border: 1px solid #ccc;
-    border-radius: 0.3em;
-    background: #f5f5f5;
+  padding: 0 1em;
+  border: 1px solid #ccc;
+  border-radius: 0.3em;
+  background: #f5f5f5;
 }
 
 pre code {
-    display: block;
-    margin: 0;
-    padding: 1.1111em 0;
-    border: 0 none;
-    background: transparent;
-    overflow-x: auto;
-    line-height: 1.4;
+  display: block;
+  margin: 0;
+  padding: 1.1111em 0;
+  border: 0 none;
+  background: transparent;
+  overflow-x: auto;
+  line-height: 1.4;
 }
 
 /* Blockquote */
 
 blockquote {
-    font-style: italic;
-    margin-left: 1em;
-    padding-left: 1em;
-    border-left: 0.5em solid #f5f5f5;
+  font-style: italic;
+  margin-left: 1em;
+  padding-left: 1em;
+  border-left: 0.5em solid #f5f5f5;
 }
