--- a/themes/isabella/css/style.css
+++ b/themes/isabella/css/style.css
@@ -75,7 +75,6 @@ body {
     max-width: 30%;
   }
 }
-
 .title * {
   color: var(--darkClr);
 }
@@ -108,6 +107,12 @@ body {
 .footer .social {
   font-size: 2rem;
 }
+
+@media (max-width: 767px) {
+    .footer {
+      gap: 1rem;
+    }
+  }
 
 /* Typography */
 
