updated styles to SCSS

--- a/themes/kmom02/scss/mobile-menu.scss
+++ b/themes/kmom02/scss/mobile-menu.scss
@@ -1,64 +1,66 @@
 /* Mobile Menu */
 
 .slide {
-    overflow-y: hidden !important;
-    transition: height 0.5s ease-in !important;
+  overflow-y: hidden !important;
+  transition: height 0.5s ease-in !important;
 }
 
-.nav ul {
+.nav {
+  ul {
     display: flex;
     justify-content: flex-end;
     padding: 1em 0;
     list-style: none;
+  }
+  ul li {
+    display: inline-block;
+    padding: 0.5em 1em;
+  }
 }
 
-.nav ul li {
-    padding: 0 1em;
-}
+// .nav a, .nav-toggle {
+//     color: $font-color;
+//     transition: color 300ms;
+// }
 
-.nav a, .nav-toggle {
-    color: var(--darkClr);
-    font-weight: bold;
-    transition: color 300ms;
+.active {
+  border-radius: 10px;
+  background-color: $font-color;
+  color: $background-color;
 }
-
-.nav a:hover {
-    color: var(--accentClr);
-}
-
 .nav-toggle {
-    display: none;
+  display: none;
 }
 
 @media (max-width: 767px) {
-    .header {
-        flex-direction: column;
-    }
+  .header {
+    flex-direction: column;
+  }
 
-    .nav ul {
-        flex-direction: column;
-        padding-bottom: 1em;
-    }
+  .nav ul {
+    flex-direction: column;
+    padding-bottom: 1em;
+  }
 
-    .nav ul li {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
+  .nav ul li {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 
-    .nav ul li a {
-        display: block;
-        padding: 0.5em 0;
-    }
+  .nav ul li a {
+    display: block;
+    padding: 0.5em 0;
+  }
 
-    .js .nav-toggle {
-        display: block;
-        float: right;
-        width: 2em;
-        margin: 0.6667em 0;
-        font-size: 1.5rem;
-        line-height: 2em;
-        text-align: center;
-        cursor: pointer;
-    }
+  .js .nav-toggle {
+    display: block;
+    float: right;
+    width: 2em;
+    margin: 0.6667em 0;
+    font-size: 1.5rem;
+    line-height: 2em;
+    text-align: center;
+    cursor: pointer;
+  }
 }
