--- a/themes/kmom02/scss/typography.scss
+++ b/themes/kmom02/scss/typography.scss
@@ -3,7 +3,7 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;600&display=swap');
-@import url("https://use.typekit.net/urg0fik.css");
+@import url('https://use.typekit.net/urg0fik.css');
 
 body {
     font-family: $font-family;
@@ -16,10 +16,10 @@ td,
 th,
 li,
 dd {
-  text-align: justify;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  margin-bottom: 0.6em;
+    text-align: justify;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    margin-bottom: 0.6em;
 }
 
 h1,
@@ -28,12 +28,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $font-family-alt;
-  margin-bottom: 0.4em;
-  font-weight: 400;
+    font-family: $font-family-alt;
+    margin-bottom: 0.4em;
+    font-weight: 400;
 }
 
 a {
-  text-decoration: none;
-  color: $font-color;
+    text-decoration: none;
+    color: $font-color;
 }
