--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,8 +1,7 @@
 $font-family: Helvetica, sans-serif;
 $font-family-alt: 'Playfair Display', serif;
-// $font-color: #161616; 
-$font-color:#4B5673;
-$font-alternative-color: #5079E3;
+// $font-color: #161616;
+$font-color: #4b5673;
+$font-alternative-color: #5079e3;
 $background-color: #e8e8e8;
-$accent-color: #2146F5;
-
+$accent-color: #2146f5;
