--- a/themes/kmom03/scss/technologies.scss
+++ b/themes/kmom03/scss/technologies.scss
@@ -1,37 +1,36 @@
 /* technologies.scss */
 
 .landingpage {
-	width: 100%;
-	display: grid;
-        .technologies {
-            grid-template-columns: repeat(3,1fr);
-        }
-    
-	gap: 1rem 1rem;
+    width: 100%;
+    display: grid;
+    gap: 1rem 1rem;
 
-        h1 {
-            grid-column: span 3;
-            justify-self: center;
-        }
+    .technologies {
+        grid-template-columns: repeat(3, 1fr);
+    }
 
-        h2{
-            margin: 0;
-        }
+    h1 {
+        grid-column: span 3;
+        justify-self: center;
+    }
 
-        .grid-item{
-            background-color: $font-color;
-            padding: 1rem;
-            width: 100%;
-            justify-self: center;
-            text-align:center;
-            text-transform: uppercase;
+    h2 {
+        margin: 0;
+    }
+}
 
-                a {
-                    color: $background-color;
-                    display:inline-block;
-                }
-        }
+.grid-item {
+    background-color: $font-color;
+    padding: 1rem;
+    width: 100%;
+    justify-self: center;
+    text-align: center;
+    text-transform: uppercase;
 
+    a {
+        color: $background-color;
+        display: inline-block;
+    }
 }
 
 .span-2 {
@@ -43,11 +42,14 @@
 }
 
 @media (max-width: 767px) {
-
-    .landingpage{
-        grid-template-columns: repeat(1,1fr);
+    .landingpage {
+        grid-template-columns: repeat(1, 1fr);
     }
-    .landingpage h1, .grid-item, .span-2, .span-3 {
+
+    .landingpage h1,
+    .grid-item,
+    .span-2,
+    .span-3 {
         grid-column: span 1;
     }
 }
