--- a/themes/kmom03/css/style.css
+++ b/themes/kmom03/css/style.css
@@ -6627,6 +6627,11 @@ pre code {
   margin-right: 2rem;
 }
 
+@media (max-width: 450px) {
+  .me {
+    max-width: 70%;
+  }
+}
 /* technologies.scss */
 .landingpage {
   width: 100%;
