--- a/themes/kmom03/scss/globals.scss
+++ b/themes/kmom03/scss/globals.scss
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: $background-color;
+    min-height: 100vh;
 }
 
 ol,
