--- a/themes/kmom03/scss/mobile-menu.scss
+++ b/themes/kmom03/scss/mobile-menu.scss
@@ -11,6 +11,7 @@
         justify-content: flex-end;
         padding: 1em 0;
         list-style: none; 
+        font-family: $font-family-alt;
     }
 
     ul li {
@@ -26,8 +27,13 @@
 
 .active {
     border-radius: 10px;
-    background-color: $font-color;
-    color: $background-color;
+    // border: 2px solid $font-color;
+    // box-shadow: 0px 2px 2px 2px   $accent-color;
+    background-color: $accent-color;
+    // color: $background-color;
+}
+.active a {
+    color: $font-color;
 }
 
 .nav-toggle {
