changed variables for my theme

--- a/themes/kmom03/scss/variables.scss
+++ b/themes/kmom03/scss/variables.scss
@@ -1,7 +1,18 @@
 $font-family: Helvetica, sans-serif;
-$font-family-alt: 'Playfair Display', serif;
-// $font-color: #161616;
-$font-color: #4b5673;
-$font-alternative-color: #5079e3;
-$background-color: #e8e8e8;
-$accent-color: #2146f5;
+$font-family-alt: 'Staatliches','Playfair Display', serif;
+
+
+$font-color: #1e1e1e;
+// $font-alternative-color: #4E5261;
+// $background-color: #D6DAE5;
+$background-color: #f0f0f0;
+// $background-color: #5A7292;
+// $accent-color: #d87575;
+$accent-color: #c4c4c4;
+$contrast: 100%;
+$invert: 0;
+// OLD COLOR CHOICES
+// $font-color: #4b5673;
+// $font-alternative-color: #5079e3;
+// $background-color: #e8e8e8;
+// $accent-color: #2146f5;
