--- a/themes/kmom03/css/style-dark.css
+++ b/themes/kmom03/css/style-dark.css
@@ -4,6 +4,7 @@
  */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
 @import url("https://use.typekit.net/urg0fik.css");
 .fa,
 .fas,
@@ -6431,7 +6432,7 @@ template {
 body {
   font-family: Helvetica, sans-serif;
   line-height: 1.2;
-  color: #4b5673;
+  color: #e3e3e3;
 }
 
 p,
@@ -6450,14 +6451,14 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display", serif;
-  margin-bottom: 0.4em;
+  font-family: "Staatliches", "Playfair Display", serif;
+  margin: 0 0 0.4em;
   font-weight: 400;
 }
 
 a {
   text-decoration: none;
-  color: #4b5673;
+  color: #e3e3e3;
 }
 
 /* Import variables */
@@ -6474,7 +6475,8 @@ a {
 body {
   display: flex;
   flex-direction: column;
-  background-color: #e8e8e8;
+  background-color: #171717;
+  min-height: 100vh;
 }
 
 ol,
@@ -6498,9 +6500,9 @@ blockquote {
 code {
   margin: 0 0.1em;
   padding: 0.1em 0.2em;
-  border: 1px solid #ccc;
+  border: 1px solid #e3e3e3;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: #444;
   font-family: monospace;
   font-size: 0.85rem;
   line-height: 1.9824;
@@ -6508,9 +6510,9 @@ code {
 
 pre {
   padding: 0 1em;
-  border: 1px solid #ccc;
+  border: 1px solid #e3e3e3;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: #444;
 }
 
 pre code {
@@ -6534,6 +6536,7 @@ pre code {
   justify-content: flex-end;
   padding: 1em 0;
   list-style: none;
+  font-family: "Staatliches", "Playfair Display", serif;
 }
 .nav ul li {
   display: inline-block;
@@ -6542,8 +6545,11 @@ pre code {
 
 .active {
   border-radius: 10px;
-  background-color: #4b5673;
-  color: #e8e8e8;
+  background-color: #444;
+}
+
+.active a {
+  color: #e3e3e3;
 }
 
 .nav-toggle {
@@ -6593,6 +6599,10 @@ pre code {
   gap: 2rem;
 }
 
+.logo {
+  filter: invert(100%);
+}
+
 .title h1 {
   margin: 0;
 }
@@ -6617,7 +6627,7 @@ pre code {
 /* Main */
 .main {
   flex: 1 0 auto;
-  max-width: 70%;
+  max-width: clamp(30%, 60%, 800px);
   min-height: 50vh;
   margin: 1rem auto;
 }
@@ -6625,6 +6635,7 @@ pre code {
 .me {
   max-width: 200px;
   margin-right: 2rem;
+  filter: contrast(125%) grayscale(100%);
 }
 
 @media (max-width: 450px) {
@@ -6636,7 +6647,7 @@ pre code {
 .landingpage {
   width: 100%;
   display: grid;
-  gap: 1rem 1rem;
+  gap: 0.5rem 0.5rem;
 }
 .landingpage .technologies {
   grid-template-columns: repeat(3, 1fr);
@@ -6650,7 +6661,7 @@ pre code {
 }
 
 .grid-item {
-  background-color: #4b5673;
+  background-color: #e3e3e3;
   padding: 1rem;
   width: 100%;
   justify-self: center;
@@ -6658,7 +6669,7 @@ pre code {
   text-transform: uppercase;
 }
 .grid-item a {
-  color: #e8e8e8;
+  color: #171717;
   display: inline-block;
 }
 
@@ -6699,11 +6710,6 @@ pre code {
   padding: 0.5rem;
 }
 
-.active a {
-  color: #e8e8e8;
-  display: inline-block;
-}
-
 @media (max-width: 650px) {
   .content-wrapper {
     grid-template-columns: 100%;
@@ -6715,15 +6721,17 @@ pre code {
 /* Footer */
 .footer {
   flex: 0 0 auto;
+  align-items: flex-end;
 }
 
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 2rem;
+  align-items: baseline;
+  padding: 1rem 2rem;
 }
 .footer a {
-  color: #4b5673;
+  color: #e3e3e3;
   margin-right: 0.5rem;
 }
 .footer .social {
@@ -6735,7 +6743,4 @@ pre code {
   .footer {
     gap: 1rem;
   }
-}
-.main {
-  background-color: yellow;
 }
