added images and content for load analysis

--- a/themes/kmom03/scss/style.scss
+++ b/themes/kmom03/scss/style.scss
@@ -10,6 +10,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 @import 'variables';
 @import 'utility';
+@import 'iframe';
 @import 'typography';
 @import 'globals';
 
