--- a/themes/kmom03/css/style.css
+++ b/themes/kmom03/css/style.css
@@ -6428,7 +6428,26 @@ template {
 
 .hidden {
   display: none !important;
-} /* Font */
+}
+
+.iframe-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.iframe-container iframe,
+.iframe-container object,
+.iframe-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Font */
 body {
   font-family: Helvetica, sans-serif;
   line-height: 1.2;
