--- a/themes/kmom03/scss/style-dark.scss
+++ b/themes/kmom03/scss/style-dark.scss
@@ -10,6 +10,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 @import 'variables-dark';
 @import 'utility';
+@import 'iframe';
 @import 'typography';
 @import 'globals';
 
