--- a/themes/kmom03/scss/style.scss
+++ b/themes/kmom03/scss/style.scss
@@ -22,4 +22,5 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'main';
 @import 'technologies';
 @import 'technology';
+@import 'gallery';
 @import 'footer';
