--- a/themes/kmom03/scss/main.scss
+++ b/themes/kmom03/scss/main.scss
@@ -4,7 +4,7 @@
     flex: 1 0 auto;
     max-width: clamp(30%, 60%, 800px);
     min-height: 50vh;
-    margin: 1rem auto;
+    margin: 0 auto 1rem;
 }
 
 .me {
