--- a/themes/kmom03/scss/variables-dark.scss
+++ b/themes/kmom03/scss/variables-dark.scss
@@ -1,11 +1,13 @@
 $font-family: Helvetica, sans-serif;
 $font-family-alt: 'Staatliches','Playfair Display', serif;
-// $font-color: #161616;
-// $font-color: #B5BEE0;
+
 $font-color: #e3e3e3;
-$font-alternative-color: #5079e3;
-$background-color: #171717;
-$accent-color: #444;
+$font-color-light: #e3e3e3;
+// $background-color: #0e0f16;
+$background-color: #090c17;
+$accent-color: #5E77E6;
+$second-color: #090c17;
+$third-color: #090c17;
 
 $contrast: 125%;
 $invert: 100%;
