--- a/themes/kmom03/scss/variables.scss
+++ b/themes/kmom03/scss/variables.scss
@@ -2,17 +2,12 @@ $font-family: Helvetica, sans-serif;
 $font-family-alt: 'Staatliches','Playfair Display', serif;
 
 
-$font-color: #1e1e1e;
-// $font-alternative-color: #4E5261;
-// $background-color: #D6DAE5;
-$background-color: #f0f0f0;
-// $background-color: #5A7292;
-// $accent-color: #d87575;
-$accent-color: #c4c4c4;
+$font-color: #26283C;
+$font-color-light: #fff;
+$background-color: #fff;
+$accent-color: #5E77E6;
+$second-color: #E4E9FF;
+$third-color: #2A3566;
+
 $contrast: 100%;
 $invert: 0;
-// OLD COLOR CHOICES
-// $font-color: #4b5673;
-// $font-alternative-color: #5079e3;
-// $background-color: #e8e8e8;
-// $accent-color: #2146f5;
