--- a/themes/kmom03/scss/code.scss
+++ b/themes/kmom03/scss/code.scss
@@ -5,7 +5,7 @@ code {
     padding: 0.1em 0.2em;
     border: 1px solid $font-color;
     border-radius: 0.3em;
-    background: $accent-color;
+    background: $second-color;
     font-family: monospace;
     font-size: 0.85rem;
     line-height: 1.9824;
@@ -15,7 +15,7 @@ pre {
     padding: 0 1em;
     border: 1px solid $font-color;
     border-radius: 0.3em;
-    background: $accent-color;
+    background: $second-color;
 }
 
 pre code {
