scss formatting to pass lint

--- a/themes/kmom03/scss/variables-dark.scss
+++ b/themes/kmom03/scss/variables-dark.scss
@@ -1,11 +1,11 @@
 $font-family: Helvetica, sans-serif;
-$font-family-alt: 'Staatliches','Playfair Display', serif;
+$font-family-alt: 'Staatliches', 'Playfair Display', serif;
 
 $font-color: #e3e3e3;
 $font-color-light: #e3e3e3;
 // $background-color: #0e0f16;
 $background-color: #090c17;
-$accent-color: #5E77E6;
+$accent-color: #5e77e6;
 $second-color: #090c17;
 $third-color: #090c17;
 
