--- a/themes/kmom03/scss/variables.scss
+++ b/themes/kmom03/scss/variables.scss
@@ -1,13 +1,12 @@
 $font-family: Helvetica, sans-serif;
-$font-family-alt: 'Staatliches','Playfair Display', serif;
+$font-family-alt: 'Staatliches', 'Playfair Display', serif;
 
-
-$font-color: #26283C;
+$font-color: #26283c;
 $font-color-light: #fff;
 $background-color: #fff;
-$accent-color: #5E77E6;
-$second-color: #E4E9FF;
-$third-color: #2A3566;
+$accent-color: #5e77e6;
+$second-color: #e4e9ff;
+$third-color: #2a3566;
 
 $contrast: 100%;
 $invert: 0;
