--- a/themes/kmom03/incl/header.twig
+++ b/themes/kmom03/incl/header.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="sv">
 
 <head>
     <meta charset="utf-8" />
@@ -15,12 +15,12 @@
     {% endif %}
 
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon2.ico">
-    <link rel="stylesheet" href="{{ theme_url }}/css/mobile-menu.css" type="text/css" />
+    {# <link rel="stylesheet" href="{{ theme_url }}/css/mobile-menu.css" type="text/css" /> #}
 
     {% if config.session.theme == "dark" %}
-        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.min.css" type="text/css"/>
     {% else %}
-         <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+         <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css"/>
     {% endif %}
 
 </head>
