removed old font imports

--- a/themes/kmom03/scss/variables.scss
+++ b/themes/kmom03/scss/variables.scss
@@ -1,5 +1,5 @@
 $font-family: Helvetica, sans-serif;
-$font-family-alt: 'Staatliches', 'Playfair Display', serif;
+$font-family-alt: 'Staatliches', serif;
 
 $font-color: #26283c;
 $font-color-light: #fff;
